🐛 fix: title overflow in list.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -893,6 +893,9 @@ input[name="switch"]:checked + label{
 }
 
 #page-table td{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
@@ -1070,20 +1073,20 @@ input[name="switch"]:checked + label{
   width: 91.666667%;
 }
 
-.w-4{
-  width: 1rem;
+.w-40{
+  width: 10rem;
 }
 
 .w-64{
   width: 16rem;
 }
 
-.w-full{
-  width: 100%;
-}
-
 .w-8{
   width: 2rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .w-16{
@@ -1094,24 +1097,16 @@ input[name="switch"]:checked + label{
   width: 6rem;
 }
 
-.w-32{
-  width: 8rem;
-}
-
-.w-36{
-  width: 9rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
 .min-w-0{
   min-width: 0px;
 }
 
 .grow{
   flex-grow: 1;
+}
+
+.table-fixed{
+  table-layout: fixed;
 }
 
 .cursor-pointer{
@@ -1204,22 +1199,6 @@ input[name="switch"]:checked + label{
   border-radius: 0.5rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
-}
-
-.rounded-full{
-  border-radius: 9999px;
-}
-
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .rounded-xl{
   border-radius: 0.75rem;
 }
@@ -1246,16 +1225,16 @@ input[name="switch"]:checked + label{
   padding: 0.25rem;
 }
 
+.p-3{
+  padding: 0.75rem;
+}
+
 .p-4{
   padding: 1rem;
 }
 
 .p-5{
   padding: 1.25rem;
-}
-
-.p-3{
-  padding: 0.75rem;
 }
 
 .px-3{
@@ -1375,6 +1354,14 @@ input[name="switch"]:checked + label{
     width: 58.333333%;
   }
 
+  .md\:w-2\/3{
+    width: 66.666667%;
+  }
+
+  .md\:w-3\/4{
+    width: 75%;
+  }
+
   .md\:flex-row{
     flex-direction: row;
   }
@@ -1395,6 +1382,14 @@ input[name="switch"]:checked + label{
 
   .lg\:w-5\/6{
     width: 83.333333%;
+  }
+
+  .lg\:w-3\/4{
+    width: 75%;
+  }
+
+  .lg\:w-7\/12{
+    width: 58.333333%;
   }
 
   .lg\:grid-cols-3{
